# side-chick

./: .env.example  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.md  setup.sh
benchmark/environment/: Dockerfile  build.sh
benchmark/evaluation/: bench_mini_swe_agent.py  query_gen.py  system_prompt_subagent_cli.md
benchmark/evaluation/configs/: example.env
benchmark/opencode/: llm_checkpoint.json  replay_edits.py  summarize_results.py
benchmark/opencode/harness/: Dockerfile  audit_commits.py  bench.py  classification_state.json  classify_with_llm.py  requirements.txt  run_test.py  verifier.py
benchmark/opencode/results/: summary.json
benchmark/opencode/tasks_llm/: 000019_7d51b709262c.json  000022_212cdedcac11.json  000023_add66a6673bc.json  000027_d3824968dbd9.json  000033_d077e8119ddb.json  (+7 more)
benchmark/swebench/: bench_aide.py  run.sh.sample
prompts/: glm-kimi-multi-fc.yaml  glm-kimi-pro-fc.yaml  glm-kimi-qa-fc.yaml  gpt-multi-fc.yaml  gpt-pro-fc.yaml  gpt-qa-fc.yaml
skills/aide/: SKILL.md
src/aide/: cli.py  mcp_server.py
src/fastcontext/: cli.py  mcp_server.py
test/: .gitignore
test/harness/: Dockerfile  classify_commits.py  pick_task.py  prepare_source.py  run_test.py  verifier.py
test/tasks_llm/: 000007_36a320057564.json  000008_2bafeb8d2f38.json  000011_fe4bc1a08638.json  000017_085ba7c91df3.json  000037_2b03d9a40cd1.json  000045_5fc6dd158e97.json  000053_f3a9c95a15d2.json  000055_c1881c74f4df.json  000060_d0424066fcd2.json
tests/: test_agent.py  test_llm.py  test_tool.py  test_toolset.py
website/: index.html
(+254 files in other folders)
