[project]
name = "aide"
version = "0.1.0"
description = "The Aide (explore) is a code search agent."
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "aiofiles>=25.1.0",
    "asyncio>=4.0.0",
    "azure-core>=1.39.0",
    "azure-identity>=1.25.3",
    "jinja2>=3.1.6",
    "mcp>=1.0.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
]


[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

benchmark = [
    "datasets>=4.5.0",
    "litellm>=1.75.5,!=1.82.7,!=1.82.8",
    "platformdirs>=4.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.0.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "textual>=0.80.0",
    "tqdm>=4.67.0",
    "tree-sitter>=0.25.2",
    "typer>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"


[project.scripts]
aide = "aide.cli:main"

[tool.isort]
profile = "black"
line_length = 119
ignore_whitespace = true
py_version = 310

[tool.black]
line_length = 119
